--- a/index.html
+++ b/index.html
@@ -224,30 +224,6 @@
             </div>
         </div>
 
-        <div class="box">
-            <img src="image/doc-5.jpg" alt="">
-            <h3>john bhai</h3>
-            <span>expert doctor</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="image/doc-6.jpg" alt="">
-            <h3>john bhai</h3>
-            <span>expert doctor</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div>
-        </div>
-
     </div>
 
 </section>
@@ -304,7 +280,7 @@
 
         <div class="box">
             <img src="image/pic-2.png" alt="">
-            <h3>john bhai</h3>
+            <h3>john bhoin</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
