--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
 
         <form action="">
             <h3>book appointment</h3>
-            <input type="text" placeholder="your name" class="box">
-            <input type="number" placeholder="your number" class="box">
-            <input type="email" placeholder="your email" class="box">
+            <input type="text" placeholder="Your name" class="box">
+            <input type="number" placeholder="Your number" class="box">
+            <input type="email" placeholder="Your email" class="box">
             <input type="date" class="box">
             <input type="submit" value="book now" class="btn">
         </form>
